# youtube-auto-dub

./: .dockerignore  .env.example  .gitignore  Dockerfile  FastAPI_CloudRun_Starter_README.md  LICENSE  README.md  app.py  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-image.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/v1/: endpoints.py
backend/app/api/v1/endponts/: test_endpoint.py
backend/app/schemas/: video_schema.py
backend/app/services/: audio_processor.py  video_assembler.py  youtube_downloader.py
backend/app/services/openvoice/: api.py  attentions.py  models.py  modules.py
backend/app/services/openvoice/text/: __init__.py  cleaners.py
backend/data/captions/: pcydlhq2MWI.it.srt
backend/processed/pcydlhq2MWI_Tq_^FhU9FDny_^vApY/: se.pth
data2/output/: fc4BozJTvc4.en.srt
examples/: colab_lipsync.ipynb  colab_lipsync_only.ipynb  selftest_dub.py
src/: app.py  main.py
src/database/: connection.py  models.py
src/ytdub/: __init__.py  api.py  cli.py  config.py  ffmpeg.py  logging.py  models.py  pipeline.py  subtitles.py
src/ytdub/stages/: __init__.py  assemble.py  diarize.py  download.py  lipsync.py  synchronize.py  transcribe.py
src/ytdub/stages/translate/: __init__.py  argos.py  base.py  nllb.py
src/ytdub/stages/tts/: __init__.py  base.py  chatterbox.py  openvoice_v2.py  xtts.py
src_old/translation/: text_translator.py
terraform/: main.tf  terraform copy.example  variabiles.tf
terraform/modules/cloud_run/: main.tf
terraform/modules/secret_manager/: main.tf
tests/: test_pipeline_units.py
