[project]
name = "ytdub"
version = "0.2.0"
description = "Local-first, fully open-source YouTube dubbing with voice cloning and time-aligned synthesis."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Saverio Mazza" }]

# Core dependencies: everything needed to run the pipeline locally, for free,
# on CPU (a GPU is used automatically if present). The heavy TTS engines live in
# optional extras so the base install stays light and installs everywhere.
dependencies = [
    "yt-dlp>=2025.1.15",        # robust YouTube download (replaces pytube/youtube-dl)
    "faster-whisper>=1.1.0",    # ASR with word-level timestamps (CTranslate2, CPU-friendly)
    "argostranslate>=1.9.6",    # fully offline MT (default translator, CPU)
    "pydub>=0.25.1",            # audio segment manipulation
    "soundfile>=0.12.1",        # wav I/O
    "numpy>=1.24",
    "typer>=0.12.0",            # the CLI (`ytdub ...`)
    "loguru>=0.7.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# Default cloning TTS: Coqui XTTS-v2 (multilingual, CPU-capable).
# The two pins below are load-bearing for coqui-tts and prevent the most common
# install breakages (verified July 2026):
#   * transformers 5.x removed `isin_mps_friendly`, which coqui-tts imports.
#   * the numba/librosa stack needs numpy < 2.1.
# For CPU machines also install torch < 2.9 (see the README "CPU recipe") to avoid
# torchcodec, whose wheel pulls CUDA libs that a CPU-only box can't load.
xtts = [
    "coqui-tts>=0.25.0",
    "transformers>=4.43,<5",
    "numpy<2.1",
]
# Fully-MIT alternative cloning TTS: OpenVoice v2 + MeloTTS.
# Install notes are in the README (MeloTTS ships from git + `unidic` download).
openvoice = ["myshell-openvoice", "melotts", "unidic"]
# Higher-quality neural MT alternative to Argos (heavier, pulls in torch).
nllb = ["transformers>=4.44", "torch>=2.2", "sentencepiece>=0.2"]
# Multi-voice: speaker diarization via pyannote (needs a free Hugging Face token).
diarize = ["pyannote.audio>=3.3", "torch>=2.2"]
# Lip-sync (Wav2Lip) runs in its OWN environment via subprocess (its librosa pin
# conflicts with coqui-tts), so there is no in-process extra to install here — see the
# README "Lip-sync" section for the Wav2Lip setup.
# Optional FastAPI server (the CLI is the primary entry point).
api = ["fastapi>=0.115", "uvicorn>=0.30"]
# Developer tooling.
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
ytdub = "ytdub.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytdub"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
